--- a/benchmark-base/pom.xml
+++ b/benchmark-base/pom.xml
@@ -15,6 +15,7 @@
         <dubbo.compiler.version>3.1.0</dubbo.compiler.version>
         <protoc.version>3.19.4</protoc.version>
         <grpc.version>1.53.0</grpc.version>
+        <spring.version>5.3.39</spring.version>
     </properties>
 
     <dependencies>
@@ -52,6 +53,26 @@
             <groupId>io.grpc</groupId>
             <artifactId>grpc-stub</artifactId>
             <version>${grpc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+            <version>3.15.3.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-client</artifactId>
+            <version>3.15.3.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jackson2-provider</artifactId>
+            <version>3.15.3.Final</version>
         </dependency>
     </dependencies>
 
